// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the style output of GridX 1`] = `
<XYGridElement
  alignX="left"
  className="gc-gridx"
  gridDirection="horizontal"
  gutterSizes={
    Object {
      "medium": "30px",
      "small": "20px",
    }
  }
  wrap={true}
>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    key=".0"
    vertical={false}
  >
    test
  </Cell>
</XYGridElement>
`;

exports[`the style output of GridX with alignment to bottom 1`] = `
<XYGridElement
  alignX="left"
  alignY="bottom"
  className="gc-gridx"
  gridDirection="horizontal"
  gutterSizes={
    Object {
      "medium": "30px",
      "small": "20px",
    }
  }
  wrap={true}
>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    gutterType="padding"
    key=".0"
    vertical={false}
  >
    test
  </Cell>
</XYGridElement>
`;

exports[`the style output of GridX with alignment to center 1`] = `
<XYGridElement
  alignX="center"
  className="gc-gridx"
  gridDirection="horizontal"
  gutterSizes={
    Object {
      "medium": "30px",
      "small": "20px",
    }
  }
  wrap={true}
>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    gutterType="padding"
    key=".0"
    vertical={false}
  >
    test
  </Cell>
</XYGridElement>
`;

exports[`the style output of GridX with alignment to justify 1`] = `
<XYGridElement
  alignX="justify"
  className="gc-gridx"
  gridDirection="horizontal"
  gutterSizes={
    Object {
      "medium": "30px",
      "small": "20px",
    }
  }
  wrap={true}
>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    gutterType="padding"
    key=".0"
    vertical={false}
  >
    test
  </Cell>
</XYGridElement>
`;

exports[`the style output of GridX with alignment to middle 1`] = `
<XYGridElement
  alignX="left"
  alignY="middle"
  className="gc-gridx"
  gridDirection="horizontal"
  gutterSizes={
    Object {
      "medium": "30px",
      "small": "20px",
    }
  }
  wrap={true}
>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    gutterType="padding"
    key=".0"
    vertical={false}
  >
    test
  </Cell>
</XYGridElement>
`;

exports[`the style output of GridX with alignment to right 1`] = `
<XYGridElement
  alignX="right"
  className="gc-gridx"
  gridDirection="horizontal"
  gutterSizes={
    Object {
      "medium": "30px",
      "small": "20px",
    }
  }
  wrap={true}
>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    gutterType="padding"
    key=".0"
    vertical={false}
  >
    test
  </Cell>
</XYGridElement>
`;

exports[`the style output of GridX with alignment to spaced 1`] = `
<XYGridElement
  alignX="spaced"
  className="gc-gridx"
  gridDirection="horizontal"
  gutterSizes={
    Object {
      "medium": "30px",
      "small": "20px",
    }
  }
  wrap={true}
>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    gutterType="padding"
    key=".0"
    vertical={false}
  >
    test
  </Cell>
</XYGridElement>
`;

exports[`the style output of GridX with alignment to stretch 1`] = `
<XYGridElement
  alignX="left"
  alignY="stretch"
  className="gc-gridx"
  gridDirection="horizontal"
  gutterSizes={
    Object {
      "medium": "30px",
      "small": "20px",
    }
  }
  wrap={true}
>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    gutterType="padding"
    key=".0"
    vertical={false}
  >
    test
  </Cell>
</XYGridElement>
`;

exports[`the style output of GridX with alignment to top 1`] = `
<XYGridElement
  alignX="left"
  alignY="top"
  className="gc-gridx"
  gridDirection="horizontal"
  gutterSizes={
    Object {
      "medium": "30px",
      "small": "20px",
    }
  }
  wrap={true}
>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    gutterType="padding"
    key=".0"
    vertical={false}
  >
    test
  </Cell>
</XYGridElement>
`;
